#3800 closed bug (fixed)
Second Click on LaunchBox Button Is Ignored
Reported by: | bonefish | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/LaunchBox | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
When double-clicking on a LaunchBox button the second click is ignored. In fact any further clicks in the double click interval are ignored. I would expect every click to trigger the button action, just as it works on any other button.
Change History (8)
follow-up: 2 comment:1 by , 16 years ago
Status: | new → assigned |
---|
comment:2 by , 16 years ago
Replying to stippi:
You mean if you quickly click three times on the Terminal icon, you want three Terminals?
Absolutely. My use case: I have a workspace I use for certain tests, for which two terminals are handy. I would like to start them via double-click on the LaunchBox button.
Well, it's a bug, not a feature.
I guess that came out the wrong way. :-)
Since usually double clicking means to launch in Tracker, but LaunchBox is supposed to launch with a single click, I want to supress the (usually undesired/unexpected) behavior to launch the app in question twice or more times if the user double clicked out of Tracker-habbit.
I don't think I've ever accidentally double-clicked a toolbar/dock button-like thing.
But I could imagine an additional option in LaunchBox to turn this supression off. Would that work?
It would work.
comment:4 by , 16 years ago
Hmmm, does this really warrant an option? I wouldn't mind buttons ignoring clicks within the double-click intervall. If you need more than one instance of the app running, which is, let's be honest, not a very common use case IMO, calm youself and wait half a second between clicks. :) In case of the Terminal you could also just open one, then switch to the keyboard, as you'll do anyway, and do a few ALT+N.
Watching the common user, my old father for instance, he apparently doesnt get the difference between a button in Windows' quickstart bar and an icon on the desktop. He always doubleclicks and ends up with two e.g. Thunderbirds (or more, as it takes so long to launch these beasts hat he thinks his first few double-clicks were ignored...).
All I'm saying, is this really worth an option? I think it's better to have one default behaviour and stick with it. I'd prefere the ignoring-within-doubleclick-interval, but wouldn't be disappointed if you go the other way.
comment:5 by , 16 years ago
The situation is somewhat different in that LaunchBox draws a button frame around the icon and also behaves like a button visually when you click the icon. Therefor, your action has immediate feedback and you cannot really think that it was ignored. LaunchPad didn't do it like that, and I think I've watched other people or myself to double click and get two app instances. That has motivated me to deliberately ignore double clicks in LaunchBox. However, since then I've added the button look when you hover and click. Windows Vista also draws the button frame now, but I don't remember how that used to be. Would be interesting to know if your father double clicks in Vista even though the button frame is displayed. Then again, Vista now displays a frame when hovering above icons, and that frame is almost not distinguishable from the button frame around the small quick-launch icons when you hover. So my whole argument applies more to Haiku anyways. The whole question is whether the button look makes you expect that a you need to single click only, as with any other icons, like in toolbars. Tracker is different because the primary purpose of displaying icons is to represent objects you can manipulate, versus a symbol for performing an action. Launching is a secondary action in Tracker.
comment:6 by , 16 years ago
Would be interesting to know if your father double clicks in Vista even though the button frame is displayed.
No Vista here. I'd doubt it. Since he probably only sees some vague coloured shape down there that will launch this or that program. A subtle frame would be lost on him. :)
Anyway, just pointing out that with a less sophisticated user there is a higher probability that he'll double-click. In any case, I don't think an option for that behaviour should clutter the GUI.
comment:7 by , 16 years ago
FWIW I wouldn't mind either way (I think I never double clicked it on purpose, nor did I see the need to quickly launch two terminals with it), but I don't think it deserves an option.
However, when I think about this, if you are actually use Haiku (and not just once), you would know if you need just one click or not (because else apps would open twice); so neglecting the double clicks just hinders the power user for no real benefit besides the eventual surprise of two opened apps :-)
comment:8 by , 16 years ago
Until he has some single launch apps in there. Then he wonders why some only open once, others twice. But I see your point. Let's just do away with the option and give Ingo his power feature. :)
You mean if you quickly click three times on the Terminal icon, you want three Terminals? Well, it's a bug, not a feature. Since usually double clicking means to launch in Tracker, but LaunchBox is supposed to launch with a single click, I want to supress the (usually undesired/unexpected) behavior to launch the app in question twice or more times if the user double clicked out of Tracker-habbit. But I could imagine an additional option in LaunchBox to turn this supression off. Would that work?