* Added setting for "Ignore Double Click". I assumed it to be the desired   behavior to ignore double clicks in case someone did it out of habbit, but   wouldn't expect an app to launch twice because of that. However, some people   may want the plain/straight button behavior, as testified in #3800. :-)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30307 a95241bf-73f2-0310-859d-f6bbb57e9c96